corona/corona-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.corona: glob:*
  name: corona-app
  namespace: corona
spec:
  replicas: 3
  selector:
    matchLabels:
      app: corona-app
  template:
    metadata:
      labels:
        app: corona-app
    spec:
      containers:
      - name: corona
        image: ilanpillemer/corona:4056ed01
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
