corona/corona-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corona-service
  namespace: corona  
spec:
  type: NodePort
  selector:
    app: corona-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
